PE2/parser.output
State 69 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt

    4 stmt: decl_stmt
    5     | if_stmt
    6     | do_while_stmt
    7     | block
    8     | expr_stmt

    9 decl_stmt: type declarator_list ';'

   10 type: INT
   11     | FLOAT
   12     | CHAR
   13     | DOUBLE

   14 declarator_list: declarator
   15                | declarator_list ',' declarator

   16 declarator: ID
   17           | ID '=' expr

   18 if_stmt: IF '(' expr ')' stmt
   19        | IF '(' expr ')' stmt ELSE stmt

   20 do_while_stmt: DO stmt WHILE '(' expr ')' ';'

   21 block: '{' stmt_list '}'

   22 expr_stmt: ID '=' expr ';'
   23          | expr ';'

   24 expr: expr '+' expr
   25     | expr '-' expr
   26     | expr '*' expr
   27     | expr '/' expr
   28     | expr '%' expr
   29     | expr EQ expr
   30     | expr NEQ expr
   31     | expr LT expr
   32     | expr GT expr
   33     | expr LE expr
   34     | expr GE expr
   35     | '-' expr
   36     | '(' expr ')'
   37     | ID
   38     | NUM


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 28
    '(' (40) 18 19 20 36
    ')' (41) 18 19 20 36
    '*' (42) 26
    '+' (43) 24
    ',' (44) 15
    '-' (45) 25 35
    '/' (47) 27
    ';' (59) 9 20 22 23
    '=' (61) 17 22
    '{' (123) 21
    '}' (125) 21
    error (256)
    ID <str> (258) 16 17 22 37
    NUM <str> (259) 38
    INT (260) 10
    FLOAT (261) 11
    CHAR (262) 12
    DOUBLE (263) 13
    IF (264) 18 19
    ELSE (265) 19
    DO (266) 20
    WHILE (267) 20
    EQ (268) 29
    NEQ (269) 30
    LE (270) 33
    GE (271) 34
    LT (272) 31
    GT (273) 32
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    stmt_list (34)
        on left: 2 3
        on right: 1 3 21
    stmt (35)
        on left: 4 5 6 7 8
        on right: 3 18 19 20
    decl_stmt (36)
        on left: 9
        on right: 4
    type (37)
        on left: 10 11 12 13
        on right: 9
    declarator_list (38)
        on left: 14 15
        on right: 9 15
    declarator (39)
        on left: 16 17
        on right: 14 15
    if_stmt (40)
        on left: 18 19
        on right: 5
    do_while_stmt (41)
        on left: 20
        on right: 6
    block (42)
        on left: 21
        on right: 7
    expr_stmt (43)
        on left: 22 23
        on right: 8
    expr (44)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 17 18 19 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    '-'     shift, and go to state 12
    '('     shift, and go to state 13
    '{'     shift, and go to state 14

    $default  reduce using rule 1 (program)

    stmt           go to state 15
    decl_stmt      go to state 16
    type           go to state 17
    if_stmt        go to state 18
    do_while_stmt  go to state 19
    block          go to state 20
    expr_stmt      go to state 21
    expr           go to state 22


State 3

    0 $accept: program $end •

    $default  accept


State 4

   22 expr_stmt: ID • '=' expr ';'
   37 expr: ID •

    '='  shift, and go to state 23

    $default  reduce using rule 37 (expr)


State 5

   38 expr: NUM •

    $default  reduce using rule 38 (expr)


State 6

   10 type: INT •

    $default  reduce using rule 10 (type)


State 7

   11 type: FLOAT •

    $default  reduce using rule 11 (type)


State 8

   12 type: CHAR •

    $default  reduce using rule 12 (type)


State 9

   13 type: DOUBLE •

    $default  reduce using rule 13 (type)


State 10

   18 if_stmt: IF • '(' expr ')' stmt
   19        | IF • '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 24


State 11

   20 do_while_stmt: DO • stmt WHILE '(' expr ')' ';'

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    '-'     shift, and go to state 12
    '('     shift, and go to state 13
    '{'     shift, and go to state 14

    stmt           go to state 25
    decl_stmt      go to state 16
    type           go to state 17
    if_stmt        go to state 18
    do_while_stmt  go to state 19
    block          go to state 20
    expr_stmt      go to state 21
    expr           go to state 22


State 12

   35 expr: '-' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 27


State 13

   36 expr: '(' • expr ')'

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 28


State 14

   21 block: '{' • stmt_list '}'

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 29


State 15

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 16

    4 stmt: decl_stmt •

    $default  reduce using rule 4 (stmt)


State 17

    9 decl_stmt: type • declarator_list ';'

    ID  shift, and go to state 30

    declarator_list  go to state 31
    declarator       go to state 32


State 18

    5 stmt: if_stmt •

    $default  reduce using rule 5 (stmt)


State 19

    6 stmt: do_while_stmt •

    $default  reduce using rule 6 (stmt)


State 20

    7 stmt: block •

    $default  reduce using rule 7 (stmt)


State 21

    8 stmt: expr_stmt •

    $default  reduce using rule 8 (stmt)


State 22

   23 expr_stmt: expr • ';'
   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43
    ';'  shift, and go to state 44


State 23

   22 expr_stmt: ID '=' • expr ';'

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 45


State 24

   18 if_stmt: IF '(' • expr ')' stmt
   19        | IF '(' • expr ')' stmt ELSE stmt

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 46


State 25

   20 do_while_stmt: DO stmt • WHILE '(' expr ')' ';'

    WHILE  shift, and go to state 47


State 26

   37 expr: ID •

    $default  reduce using rule 37 (expr)


State 27

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr
   35     | '-' expr •

    $default  reduce using rule 35 (expr)


State 28

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr
   36     | '(' expr • ')'

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43
    ')'  shift, and go to state 48


State 29

    3 stmt_list: stmt_list • stmt
   21 block: '{' stmt_list • '}'

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    '-'     shift, and go to state 12
    '('     shift, and go to state 13
    '{'     shift, and go to state 14
    '}'     shift, and go to state 49

    stmt           go to state 15
    decl_stmt      go to state 16
    type           go to state 17
    if_stmt        go to state 18
    do_while_stmt  go to state 19
    block          go to state 20
    expr_stmt      go to state 21
    expr           go to state 22


State 30

   16 declarator: ID •
   17           | ID • '=' expr

    '='  shift, and go to state 50

    $default  reduce using rule 16 (declarator)


State 31

    9 decl_stmt: type declarator_list • ';'
   15 declarator_list: declarator_list • ',' declarator

    ';'  shift, and go to state 51
    ','  shift, and go to state 52


State 32

   14 declarator_list: declarator •

    $default  reduce using rule 14 (declarator_list)


State 33

   29 expr: expr EQ • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 53


State 34

   30 expr: expr NEQ • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 54


State 35

   33 expr: expr LE • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 55


State 36

   34 expr: expr GE • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 56


State 37

   31 expr: expr LT • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 57


State 38

   32 expr: expr GT • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 58


State 39

   24 expr: expr '+' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 59


State 40

   25 expr: expr '-' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 60


State 41

   26 expr: expr '*' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 61


State 42

   27 expr: expr '/' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 62


State 43

   28 expr: expr '%' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 63


State 44

   23 expr_stmt: expr ';' •

    $default  reduce using rule 23 (expr_stmt)


State 45

   22 expr_stmt: ID '=' expr • ';'
   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43
    ';'  shift, and go to state 64


State 46

   18 if_stmt: IF '(' expr • ')' stmt
   19        | IF '(' expr • ')' stmt ELSE stmt
   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43
    ')'  shift, and go to state 65


State 47

   20 do_while_stmt: DO stmt WHILE • '(' expr ')' ';'

    '('  shift, and go to state 66


State 48

   36 expr: '(' expr ')' •

    $default  reduce using rule 36 (expr)


State 49

   21 block: '{' stmt_list '}' •

    $default  reduce using rule 21 (block)


State 50

   17 declarator: ID '=' • expr

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 67


State 51

    9 decl_stmt: type declarator_list ';' •

    $default  reduce using rule 9 (decl_stmt)


State 52

   15 declarator_list: declarator_list ',' • declarator

    ID  shift, and go to state 30

    declarator  go to state 68


State 53

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   29     | expr EQ expr •
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 29 (expr)


State 54

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   30     | expr NEQ expr •
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 30 (expr)


State 55

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   33     | expr LE expr •
   34     | expr • GE expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 33 (expr)


State 56

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr
   34     | expr GE expr •

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 34 (expr)


State 57

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   31     | expr LT expr •
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 31 (expr)


State 58

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   32     | expr GT expr •
   33     | expr • LE expr
   34     | expr • GE expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 32 (expr)


State 59

   24 expr: expr • '+' expr
   24     | expr '+' expr •
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 24 (expr)


State 60

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   25     | expr '-' expr •
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 25 (expr)


State 61

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   26     | expr '*' expr •
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    $default  reduce using rule 26 (expr)


State 62

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   27     | expr '/' expr •
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    $default  reduce using rule 27 (expr)


State 63

   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   28     | expr '%' expr •
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    $default  reduce using rule 28 (expr)


State 64

   22 expr_stmt: ID '=' expr ';' •

    $default  reduce using rule 22 (expr_stmt)


State 65

   18 if_stmt: IF '(' expr ')' • stmt
   19        | IF '(' expr ')' • stmt ELSE stmt

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    '-'     shift, and go to state 12
    '('     shift, and go to state 13
    '{'     shift, and go to state 14

    stmt           go to state 69
    decl_stmt      go to state 16
    type           go to state 17
    if_stmt        go to state 18
    do_while_stmt  go to state 19
    block          go to state 20
    expr_stmt      go to state 21
    expr           go to state 22


State 66

   20 do_while_stmt: DO stmt WHILE '(' • expr ')' ';'

    ID   shift, and go to state 26
    NUM  shift, and go to state 5
    '-'  shift, and go to state 12
    '('  shift, and go to state 13

    expr  go to state 70


State 67

   17 declarator: ID '=' expr •
   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43

    $default  reduce using rule 17 (declarator)


State 68

   15 declarator_list: declarator_list ',' declarator •

    $default  reduce using rule 15 (declarator_list)


State 69

   18 if_stmt: IF '(' expr ')' stmt •
   19        | IF '(' expr ')' stmt • ELSE stmt

    ELSE  shift, and go to state 71

    ELSE      [reduce using rule 18 (if_stmt)]
    $default  reduce using rule 18 (if_stmt)


State 70

   20 do_while_stmt: DO stmt WHILE '(' expr • ')' ';'
   24 expr: expr • '+' expr
   25     | expr • '-' expr
   26     | expr • '*' expr
   27     | expr • '/' expr
   28     | expr • '%' expr
   29     | expr • EQ expr
   30     | expr • NEQ expr
   31     | expr • LT expr
   32     | expr • GT expr
   33     | expr • LE expr
   34     | expr • GE expr

    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LE   shift, and go to state 35
    GE   shift, and go to state 36
    LT   shift, and go to state 37
    GT   shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 43
    ')'  shift, and go to state 72


State 71

   19 if_stmt: IF '(' expr ')' stmt ELSE • stmt

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    '-'     shift, and go to state 12
    '('     shift, and go to state 13
    '{'     shift, and go to state 14

    stmt           go to state 73
    decl_stmt      go to state 16
    type           go to state 17
    if_stmt        go to state 18
    do_while_stmt  go to state 19
    block          go to state 20
    expr_stmt      go to state 21
    expr           go to state 22


State 72

   20 do_while_stmt: DO stmt WHILE '(' expr ')' • ';'

    ';'  shift, and go to state 74


State 73

   19 if_stmt: IF '(' expr ')' stmt ELSE stmt •

    $default  reduce using rule 19 (if_stmt)


State 74

   20 do_while_stmt: DO stmt WHILE '(' expr ')' ';' •

    $default  reduce using rule 20 (do_while_stmt)
